--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
             background-color: #eee;
             overflow-y: scroll;
         }
+        input[type='number'] {
+            width: 50px;
+        }
     </style>
 </head>
 <body>
