Renamed to bootstrap-input-spinner

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>be-bootstrap-input-spinner</title>
+    <title>bootstrap-input-spinner</title>
     <link rel="stylesheet" href="./node_modules/bootstrap/dist/css/bootstrap.min.css"/>
     <style type="text/css">
         pre.code {
@@ -17,12 +17,12 @@
 </head>
 <body>
 <section class="container">
-    <h1>be-bootstrap-input-spinner</h1>
+    <h1>bootstrap-input-spinner</h1>
     <p>
         A Bootstrap/jQuery plugin to create input spinner elements with Bootstrap 4.
     </p>
     <h2>Source code and documentation</h2>
-    <p><a href="https://github.com/shaack/be-bootstrap-input-spinner">GitHub repository</a></p>
+    <p><a href="https://github.com/shaack/bootstrap-input-spinner">GitHub repository</a></p>
     <h2>Examples</h2>
 
     <pre class="code">&lt;input type="number" value="50" min="0" max="100" step="10"/&gt;</pre>
@@ -40,7 +40,7 @@
 <!-- bootstrap needs jQuery -->
 <script src="./node_modules/jquery/dist/jquery.min.js"></script>
 <script src="./node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
-<script src="./src/be-bootstrap-input-spinner/InputSpinner.js"></script>
+<script src="./src/bootstrap-input-spinner/InputSpinner.js"></script>
 <script>
     $("input[type='number']").InputSpinner();
 </script>
