moved main source file

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 <!-- bootstrap needs jQuery -->
 <script src="./node_modules/jquery/dist/jquery.min.js"></script>
 <script src="./node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
-<script src="./src/bootstrap-input-spinner/InputSpinner.js"></script>
+<script src="./src/InputSpinner.js"></script>
 <script>
     $("input[type='number']").InputSpinner();
 </script>
