--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <section class="container">
     <h1>bootstrap-input-spinner</h1>
     <p>
-        A Bootstrap/jQuery plugin to create input spinner elements with Bootstrap 4.
+        A Bootstrap 4 / jQuery plugin to create input spinner elements for number input.
     </p>
     <h2>Source code and documentation</h2>
     <p><a href="https://github.com/shaack/bootstrap-input-spinner">GitHub repository</a></p>
