Demo page styling

--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
     </style>
 </head>
 <body>
-<section class="container">
-    <h1>bootstrap-input-spinner</h1>
-    <p>
+<section class="container pt-5">
+    <h1 class="alert-heading">bootstrap-input-spinner</h1>
+    <p class="mb-3">
         A Bootstrap 4 / jQuery plugin to create input spinner elements for number input.
     </p>
     <h2>Source code and documentation</h2>
