Demo page styling

--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
         input[type='number'] {
             width: 50px;
         }
+        .input-group {
+            width: 200px;
+        }
     </style>
 </head>
 <body>
