--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 </head>
 <body>
 <section class="container pt-5">
-    <h1 class="alert-heading">bootstrap-input-spinner</h1>
+    <h1>bootstrap-input-spinner</h1>
     <p class="mb-3">
         A Bootstrap 4 / jQuery plugin to create input spinner elements for number input.
     </p>
