--- a/index.html
+++ b/index.html
@@ -38,9 +38,9 @@
     <h5>Classes 'is-invalid' and 'is-valid'; properties 'required' and 'placeholder'</h5>
     <p>To enable server-side validation, the classes 'is-invalid' and 'is-valid' of the original input are copied to the created input element.
         Also 'required' and 'placeholder' are copied.</p>
-    <pre class="code">&lt;input class="<strong>is-invalid</strong>" <strong>placeholder</strong>="a number please" <strong>required</strong> type="number" value="" min="-100" max="100"/&gt;</pre>
+    <pre class="code">&lt;input <strong>placeholder</strong>="Enter a number" <strong>required</strong> type="number" value="" min="-100" max="100"/&gt;</pre>
     <p>
-        <input class="is-invalid" placeholder="a number please" required type="number" value="" min="-100" max="100"/>
+        <input placeholder="Enter a number" required type="number" value="" min="-100" max="100"/>
     </p>
         <input type="submit" class="btn btn-primary mb-4" value="Submit to test empty input"/>
     </form>
