--- a/index.html
+++ b/index.html
@@ -55,11 +55,11 @@
 })</pre>
         <h4>Programmatic change of value</h4>
         <p>
-            Gross:
+            Gross
             <input type="number" id="inputGross" value="100" min="0" max="10000" step="0.01" data-decimals="2"/>
         </p>
         <p>
-            Net (+19%):
+            Net (+19%)
             <input type="number" id="inputNet" value="100" min="0" max="10000" step="0.01" data-decimals="2"/>
         </p>
         <pre class="code">inputGross.addEventListener("change", function(event) {
