Text optimization in demo page

--- a/index.html
+++ b/index.html
@@ -55,27 +55,27 @@
 })</pre>
         <h4>Programmatic change of value</h4>
         <p>
-            Gross
-            <input type="number" id="inputGross" value="100" min="0" max="10000" step="0.01" data-decimals="2"/>
-        </p>
-        <p>
-            Net (+19%)
+            Net
             <input type="number" id="inputNet" value="100" min="0" max="10000" step="0.01" data-decimals="2"/>
         </p>
+        <p>
+            Gross (+19%)
+            <input type="number" id="inputGross" value="100" min="0" max="10000" step="0.01" data-decimals="2"/>
+        </p>
         <pre class="code">inputGross.addEventListener("change", function(event) {
-    inputNet.setValue(inputGross.value * 1.19) // use `setValue` instead of `value=`
+    inputNet.setValue(inputGross.value / 1.19) // use `setValue` instead of `value=`
 })
 inputNet.addEventListener("change", function(event) {
-    inputGross.setValue(inputNet.value / 1.19)
+    inputGross.setValue(inputNet.value * 1.19)
 })</pre>
         <script>
             var inputGross = document.getElementById("inputGross")
             var inputNet = document.getElementById("inputNet")
             inputGross.addEventListener("change", function(event) {
-                inputNet.setValue(inputGross.value * 1.19) // use `setValue` instead of `value=`
+                inputNet.setValue(inputGross.value / 1.19) // use `setValue` instead of `value=`
             })
             inputNet.addEventListener("change", function(event) {
-                inputGross.setValue(inputNet.value / 1.19) // use `setValue` instead of `value=`
+                inputGross.setValue(inputNet.value * 1.19)
             })
         </script>
         <h4>Classes 'is-invalid' and 'is-valid'; properties 'required' and 'placeholder'</h4>
