--- a/index.html
+++ b/index.html
@@ -63,10 +63,10 @@
             <input type="number" id="inputGross" value="100" min="0" max="10000" step="0.01" data-decimals="2"/>
         </p>
         <pre class="code">inputNet.addEventListener("change", function(event) {
-    inputGross.setValue(inputNet.value * 1.19)
+    inputGross.setValue(inputNet.value * 1.19) // use `setValue` instead of `value=`
 })
 inputGross.addEventListener("change", function(event) {
-    inputNet.setValue(inputGross.value / 1.19) // use `setValue` instead of `value=`
+    inputNet.setValue(inputGross.value / 1.19)
 })</pre>
         <script>
             var inputNet = document.getElementById("inputNet")
