--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@ inputGross.addEventListener("change", function(event) {
     </form>
     <h5>Script</h5>
     <p>
-        This script enabled the InputSpinner for all inputs with type='number' on this page.
+        This script enables the InputSpinner for all inputs with type='number' on this page.
         No extra css needed, just Bootstrap 4.
     </p>
     <pre class="code">&lt;script&gt
