--- a/index.html
+++ b/index.html
@@ -63,14 +63,14 @@
 &lt;script&gt
     $("input[type='number']").InputSpinner()
 &lt;/script&gt;</pre>
-    <h2>Repsitory, documentation and package</h2>
+    <h2>Repository, documentation and npm package</h2>
     <p>Find the source code, more documentation and the npm package at</p>
     <ul>
         <li><a href="https://github.com/shaack/bootstrap-input-spinner">GitHub repository</a></li>
         <li><a href="https://www.npmjs.com/package/bootstrap-input-spinner">npm package</a></li>
     </ul>
     <h2>Examples</h2>
-    <p>The following contains examples of all Bootstrap 4 InputSpinners main features</p>
+    <p>The following contains examples of the InputSpinner's main features</p>
     <form>
         <h3>Simple Integer</h3>
         <p>
