--- a/index.html
+++ b/index.html
@@ -60,9 +60,9 @@
         <b>No extra css needed</b>, just Bootstrap 4.
     </p>
     <pre class="code">&lt;script src="./src/InputSpinner.js">&lt;/script>
-&lt;script&gt
+&lt;script>
     $("input[type='number']").InputSpinner()
-&lt;/script&gt;</pre>
+&lt;/script></pre>
     <h2>Repository, documentation and npm package</h2>
     <p>Find the source code, more documentation and the npm package at</p>
     <ul>
@@ -76,12 +76,12 @@
         <p>
             <input type="number" value="500" min="0" max="1000" step="10"/>
         </p>
-        <pre class="code">&lt;input type="number" value="500" min="0" max="1000" step="10"/&gt;</pre>
+        <pre class="code">&lt;input type="number" value="500" min="0" max="1000" step="10"/></pre>
         <h3>Floating Point</h3>
         <p>
             <input type="number" value="4.5" data-decimals="2" min="0" max="9" step="0.1"/>
         </p>
-        <pre class="code">&lt;input type="number" value="4.5" data-decimals="2" min="0" max="9" step="0.1"/&gt;</pre>
+        <pre class="code">&lt;input type="number" value="4.5" data-decimals="2" min="0" max="9" step="0.1"/></pre>
         <h3>Handle <span class="code">change</span> and <span class="code">input</span> events and
             read the value from JavaScript
         with <span class="code">val()</span></h3>
@@ -120,7 +120,7 @@ $inputGross.on("change", function (event) {
         <p>
             <input placeholder="Enter a number" required type="number" value="" min="-100" max="100"/>
         </p>
-        <pre class="code">&lt;input <strong>placeholder</strong>="Enter a number" <strong>required</strong> type="number" value="" min="-100" max="100"/&gt;</pre>
+        <pre class="code">&lt;input <strong>placeholder</strong>="Enter a number" <strong>required</strong> type="number" value="" min="-100" max="100"/></pre>
         <input type="submit" id="submitButton" class="btn btn-primary mb-4" value="Submit to test empty input"/>
     </form>
     <h3>Sizing</h3>
