--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             has internationalized number formatting,
         </li>
         <li>
-            handles <span class="code">val()</span> like the native element,
+            handles <span class="code">val()</span> like the native element
         </li>
         <li>
             and dispatches <span class="code">change</span> and <span class="code">input</span> events on value change
